@@ -64,3 +64,4 @@ Changes in version 1.7.x
 + mergeSEs: match rows based on all available taxonomy level data on rowData
 + mergeSEs: fix bug related to equally named variables that are different class
 + mergeSEs: option for merging multiple assays
++ calculateUnifrac: option for specifying the tree from TreeSE
